Tela de agendamento

--- a/website/static/assets/css/componentes/navbar.css
+++ b/website/static/assets/css/componentes/navbar.css
@@ -37,4 +37,5 @@
         .navegacao__label{
             color: var(--cor-texto-branco);
             font-size: 0.75rem;
+            line-height: 18px;
         }
