--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -22,7 +22,7 @@
       <img class="plano-imagem" src="{% static 'assets/img/home/barba.png' %}" alt="Barba">
 
       <div class="plano-descricao">
-        <p class="texto-branco texto-negrito texto-12 plano-titulo">Barba sempre bem feita</p>
+        <p class="texto-branco texto-negrito plano-titulo">Barba sempre bem feita</p>
         <span class="texto-branco texto-medio texto-12">Faça sua barba quando quiser</span>
       </div>
     </div>
@@ -31,7 +31,7 @@
       <img class="plano-imagem" src="{% static 'assets/img/home/corte.png' %}" alt="Corte">
 
       <div class="plano-descricao">
-        <p class="texto-branco texto-negrito texto-12 plano-titulo">Corte de cabelo ilimitado</p>
+        <p class="texto-branco texto-negrito plano-titulo">Corte de cabelo ilimitado</p>
         <span class="texto-branco texto-medio texto-12">Cabelo sempre bem cortado</span>
       </div>
     </div>
@@ -40,7 +40,7 @@
       <img class="plano-imagem" src="{% static 'assets/img/home/convidado.png' %}" alt="Convidado">
 
       <div class="plano-descricao">
-        <p class="texto-branco texto-negrito texto-12 plano-titulo">Convidado VIP</p>
+        <p class="texto-branco texto-negrito plano-titulo">Convidado VIP</p>
         <span class="texto-branco texto-medio texto-12">No mês do seu aniversário</span>
       </div>
     </div>
