--- a/website/static/assets/css/componentes/botao.css
+++ b/website/static/assets/css/componentes/botao.css
@@ -14,6 +14,7 @@
     cursor: pointer;
     font-size: 1rem;
     font-weight: 600;
+    outline: 0;
     padding-block: .5rem;
     transition: .5s;
     width: 100%;
